iter_language/tests/corpus/compose/invalid/files-list-with-stdin.iter
queue main file { path = "./.iter/queue" }

trigger feed files {
    from = [stdin, "path:./a.txt"]
    target = main
}
